--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     />
     <!-- Estilos CSS -->
     <link rel="stylesheet" href="css/common.css" />
+    <link rel="stylesheet" href="./css/pages/index.css">
   </head>
   <body>
     <header>
@@ -65,14 +66,17 @@
           <p id="parrafo-sec">Resultados provisiorios</p>
           <div class="botonera">
             <div class="boton-paso">
+              <a href="./paso.html">
               <i
                 class="fa-solid fa-envelope-open-text fa-2xl"
                 style="color: #ffffff"
                 id="icon-vote"
               ></i>
               <input type="button" name="Paso" id="Paso" value="Paso" />
+              </a>
             </div>
             <div class="boton-general">
+              <a href="./generales.html">
               <i
                 class="fa-solid fa-envelope-open-text fa-2xl"
                 style="color: #ffffff"
@@ -84,6 +88,7 @@
                 id="General"
                 value="General"
               />
+              </a>
             </div>
           </div>
         </section>
