--- a/generales.html
+++ b/generales.html
@@ -74,19 +74,21 @@
                 type="search"
                 name="buscar"
                 id="barra-busqueda"
-                placeholder="Filtrar"
+                placeholder="FILTRAR"
               />
             </div>
           </div>
 
+          <ul class="informe">
+            <li><a href="informes.html">INFORMES</a></li>
+          </ul>
           <ul>
-            <li><a class="active" href="informes.html">Informes</a></li>
             <li><a href="#contact"></a></li>
           </ul>
         </div>
         <ul>
           <li>
-            <a class="active" href="index.html" id="boton-inicio">Inicio</a>
+            <a class="active" href="index.html" id="boton-inicio">INICIO</a>
           </li>
           <li><a href="#contact"></a></li>
         </ul>
