--- a/generales.html
+++ b/generales.html
@@ -16,8 +16,8 @@
       referrerpolicy="no-referrer"
     />
     <!-- Estilos CSS -->
-    <link rel="stylesheet" href="css/common.css" />
-    <link rel="stylesheet" href="css/pages/generales.css" />
+    <link rel="stylesheet" href="./css/common.css" />
+    <link rel="stylesheet" href="./css/pages/generales.css" />
   </head>
   <body>
     <header>
