--- a/generales.html
+++ b/generales.html
@@ -1,25 +1,21 @@
 <!DOCTYPE html>
 <html lang="es">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="shortcut icon" href="img/icons/favicon-16x16.png">
-    <title>Generales | GOB</title>
-    
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/fontawesome/5.15.4/css/all.min.css"
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
-    <!-- Estilos CSS -->
-    <link rel="stylesheet" href="css/common.css" />
-    <link rel="stylesheet" href="./css/pages/generales.css">
-  </head>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="shortcut icon" href="img/icons/favicon-16x16.png">
+  <title>Generales | GOB</title>
+
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fontawesome/5.15.4/css/all.min.css"
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <!-- Estilos CSS -->
+  <link rel="stylesheet" href="css/common.css" />
+  <link rel="stylesheet" href="./css/pages/generales.css">
+</head>
+
+<body>
   <body>
     <header>
       <!--Barra de logo portal-->
@@ -30,51 +26,121 @@
       </div>
       <!--Barra de menú principal-->
       <div class="barra-de-menu">
+        <div class="selects">
+          <select name="Año" class="anio">
+            <option value="Año" selected disabled>Año</option>
+              <option value="2022">2020</option>
+              <option value="2023">2023</option>
+          </select>
+          <select name="Cargo" class="cargo">
+            <option value="Cargo" selected disabled>Cargo</option>
+            <option value="intendente">Intendente</option>
+            <option value="consejal">Consejal</option>
+            <option value="gobernador">Gobernador</option>
+            <option value="presidente">Presidente</option>
+          </select>
+          <select name="Distrito" class="distrito">
+            <option value="Distirto" selected disabled>Distrito</option>
+            <option value="sante fe">Santa Fe</option>
+            <option value="buenos aires">Buenos Aires</option>
+            <option value="cordoba">Cordoba</option>
+          </select>
+          <i class="fa-solid fa-magnifying-glass" id="Lupa"></i>
+          <input type="search" class="filtrar" placeholder="FILTRAR">
+        </div>
         <ul>
-          <li><a class="active" href="informes.html">Informes</a></li>
-          <li><a href="#contact"></a></li>
+          <li><a class="boton-general" href="generales.html">GENERALES</a></li>
+        </ul>
+        <ul>
+          <li><a class="boton-informe" href="informes.html">INFORMES</a></li>
+        </ul>
+        <ul class="inicio">
+          <li><a href="index.html">INICIO</a></li>
         </ul>
       </div>
     </header>
-    <!-- Contenido principal de la página -->
-    <main>
-        <div class="mensjaes">
-          <div class="verde">
-            <p>Se agrego con exito el resultado al informe</p>
-          </div>
-          <div class="rojo">
-            <p>Error: Se produjo un error al intentar agregar resultados al informe</p>
-          </div>
-          <div class="amarillo">
-            <p>mensaje en amarillo</p>
-          </div>
+  <!-- Contenido principal de la página -->
+  <main>
+    <div class="mensjaes">
+      <div class="verde">
+
+        <p> <i class="fa fa-thumbs-up"></i> Se agrego con éxito el resultado al informe</p>
+      </div>
+      <div class="rojo">
+        <p> <i class=" fa fa-exclamation-triangle"></i> Error: Se produjo un error al intentar agregar resultados al
+          informe</p>
+      </div>
+      <div class="amarillo">
+        <p> <i class="fa fa-exclamation"></i> La operacion no se pudo completar</p>
+      </div>
+    </div>
+    <!--Seccion para agregar una palicula favorita por codigo-->
+    <div class="texto">
+      <h1>Elecciones 2021 | General</h1>
+
+      <p class="texto-path">2020 > Generales > Provisorio > Senadores Nacionales > Buenos
+        Aires</p>
+    </div>
+
+    <div class="contenedor-cajas">
+
+      <button class="agregar-informe">
+        <span>+Agregar a informe</span>
+      </button>
+
+      <div class="mesas-estructuradas">
+        <div class="icono-mesa">
+          <i class="fa fa-check"></i>
         </div>
-        <!--Seccion para agregar una palicula favorita por codigo-->
-        
-    </main>
-    <!--Pie de página-->
-    <footer>
-      <div class="footer-container">
-        <div class="footer-img">
-          <img
-            src="img/icons/Ministerio-del-Interior_pluma.1ab9a7a7.png"
-            alt="ministerio"
-          />
-          <img src="img/icons/Logo_DINE_negativo.a88f983e.png" alt="dine-neg" />
-          <img src="img/icons/logos_001-10.4430c8d5.png" alt="001logo" />
-        </div>
-        <div class="footer-parrafo">
-          <p>
-            “Resultados Provisorios en base a telegramas recibidos (Art. 43 Ley
-            26571 y Art. 105 Ley 19945). Los porcentajes de las agrupaciones
-            políticas son calculados sobre los votos válidos (PASO) conforme al
-            art. 45 Ley 26.571 y afirmativos (Generales). No se incluyen los
-            votos correspondientes a los electores residentes en el exterior ni
-            privados de la libertad. Al usar este sitio usted acepta los
-            <a href="www.google.com" id="link-footer">Términos y Condiciones."</a>
-          </p>
+        <div class="contenido-mesa">
+          <h3>Mesas estructuradas</h3>
+          <p>62.71%</p>
         </div>
       </div>
-    </footer>
-  </body>
+      <div class="electores">
+        <div class="icono-electores">
+          <i class="fa fa-check"></i>
+        </div>
+        <div class="contenido-electores">
+          <h3>Electores</h3>
+          <p>62.71%</p>
+        </div>
+      </div>
+      <div class="participacion-sobre-estructurado">
+        <div class="icono-participacion">
+          <i class="fa fa-check"></i>
+        </div>
+        <div class="contenido-participacion">
+          <h3>Participacion sobre estructurado</h3>
+          <p>62.71%</p>
+        </div>
+      </div>
+
+
+    </div>
+  </main>
+  <!--Pie de página-->
+
+  <footer>
+    <div class="footer-container">
+      <div class="footer-img">
+        <img src="img/icons/Ministerio-del-Interior_pluma.1ab9a7a7.png" alt="ministerio" />
+        <img src="img/icons/Logo_DINE_negativo.a88f983e.png" alt="dine-neg" />
+        <img src="img/icons/logos_001-10.4430c8d5.png" alt="001logo" />
+      </div>
+      <div class="footer-parrafo">
+        <p>
+          “Resultados Provisorios en base a telegramas recibidos (Art. 43 Ley
+          26571 y Art. 105 Ley 19945). Los porcentajes de las agrupaciones
+          políticas son calculados sobre los votos válidos (PASO) conforme al
+          art. 45 Ley 26.571 y afirmativos (Generales). No se incluyen los
+          votos correspondientes a los electores residentes en el exterior ni
+          privados de la libertad. Al usar este sitio usted acepta los
+          <a href="www.google.com" id="link-footer">Términos y Condiciones."</a>
+        </p>
+      </div>
+    </div>
+  </footer>
+</body>
+
 </html>
