--- a/generales.html
+++ b/generales.html
@@ -108,36 +108,34 @@
       <button class="agregar-informe">
         <span>+Agregar a informe</span>
       </button>
-
-      <div class="mesas-estructuradas">
-        <div class="icono-mesa">
-          <i class="fa fa-check"></i>
+      <div class="derecha">
+        <div class="mesas-estructuradas">
+          <div class="icono-mesa">
+            <i class="fa fa-check"></i>
+          </div>
+          <div class="contenido-mesa">
+            <h3>Mesas estructuradas</h3>
+            <p>62.71%</p>
+          </div>
         </div>
-        <div class="contenido-mesa">
-          <h3>Mesas estructuradas</h3>
-          <p>62.71%</p>
+        <div class="electores">
+          <div class="icono-electores">
+            <i class="fa fa-check"></i>
+          </div>
+          <div class="contenido-electores">
+            <h3>Electores</h3>
+            <p>62.71%</p>
+          </div>
+        </div>
+        <div class="participacion-sobre-estructurado">
+          <div class="icono-participacion">
+            <i class="fa fa-check"></i>
+          </div>
+          <div class="contenido-participacion">
+            <h3>Participacion sobre estructurado</h3>
+            <p>62.71%</p>
         </div>
       </div>
-      <div class="electores">
-        <div class="icono-electores">
-          <i class="fa fa-check"></i>
-        </div>
-        <div class="contenido-electores">
-          <h3>Electores</h3>
-          <p>62.71%</p>
-        </div>
-      </div>
-      <div class="participacion-sobre-estructurado">
-        <div class="icono-participacion">
-          <i class="fa fa-check"></i>
-        </div>
-        <div class="contenido-participacion">
-          <h3>Participacion sobre estructurado</h3>
-          <p>62.71%</p>
-        </div>
-      </div>
-
-
     </div>
   </main>
   <!--Pie de página-->
