--- a/generales.html
+++ b/generales.html
@@ -64,7 +64,7 @@
           <input type="search" class="filtrar" placeholder="FILTRAR">
         </div>
         <ul>
-          <li><a class="boton-paso" href="generales.html">PASO</a></li>
+          <li><a class="boton-paso" href="paso.html">PASO</a></li>
         </ul>
         <ul>
           <li><a class="boton-informe" href="informes.html">INFORMES</a></li>
