--- a/generales.html
+++ b/generales.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="shortcut icon" href="img/icons/favicon-16x16.png">
+  
   <title>Generales | GOB</title>
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
@@ -42,23 +43,14 @@
       <!--Barra de menú principal-->
       <div class="barra-de-menu">
         <div class="selects">
-          <select name="Año" class="anio">
-            <option value="Año" selected disabled>Año</option>
-            <option value="2022">2020</option>
-            <option value="2023">2023</option>
+          <select name="Año" class="anio" id="select-anio">
+            <option value="none" selected disabled>Año</option>
           </select>
-          <select name="Cargo" class="cargo">
-            <option value="Cargo" selected disabled>Cargo</option>
-            <option value="intendente">Intendente</option>
-            <option value="consejal">Consejal</option>
-            <option value="gobernador">Gobernador</option>
-            <option value="presidente">Presidente</option>
+          <select name="Cargo" class="cargo" id="select-cargo">
+            <option value="none" selected disabled>Cargo</option>
           </select>
-          <select name="Distrito" class="distrito">
-            <option value="Distirto" selected disabled>Distrito</option>
-            <option value="sante fe">Santa Fe</option>
-            <option value="buenos aires">Buenos Aires</option>
-            <option value="cordoba">Cordoba</option>
+          <select name="Distrito" class="distrito" id="select-districto">
+            <option value="none" selected disabled>Distrito</option>
           </select>
           <i class="fa-solid fa-magnifying-glass" id="Lupa"></i>
           <input type="search" class="filtrar" placeholder="FILTRAR">
@@ -74,26 +66,24 @@
         </ul>
       </div>
     </header>
-    <!-- Contenido principal de la página -->
+    <!-- Contenido principal de la página --> 
     <main>
-      <div class="mensjaes">
-        <div class="verde">
-
-          <p> <i class="fa fa-thumbs-up"></i> Se agrego con éxito el resultado al informe</p>
+      <div class="mensajes">
+        <div class="verde" id="mensaje-verde">
+          <p><i class="fa fa-thumbs-up"></i> Se agregó con éxito el resultado al informe</p>
         </div>
-        <div class="rojo">
-          <p> <i class=" fa fa-exclamation-triangle"></i> Error: Se produjo un error al intentar agregar resultados al
-            informe</p>
+        <div class="rojo" id="mensaje-rojo">
+          <p><i class="fa fa-exclamation-triangle"></i> Error: Se produjo un error al intentar agregar resultados al informe</p>
         </div>
-        <div class="amarillo">
-          <p> <i class="fa fa-exclamation"></i> La operacion no se pudo completar</p>
+        <div class="amarillo" id="mensaje-amarillo">
+          <p><i class="fa fa-exclamation"></i> La operación no se pudo completar</p>
         </div>
-      </div>
+    </div>
       <!--Seccion para agregar una palicula favorita por codigo-->
       <div class="texto">
-        <h1>Elecciones 2021 | General</h1>
+        <h1 class="titulo-principal" id="titulo-principal">Elecciones 2021 | General</h1>
 
-        <p class="texto-path">2020 > Generales > Provisorio > Senadores Nacionales > Buenos
+        <p class="texto-path" id="ruta-elecciones">2020 > Generales > Provisorio > Senadores Nacionales > Buenos
           Aires</p>
       </div>
       <div class="all-container">
@@ -455,5 +445,6 @@
       </div>
     </footer>
   </body>
+  <script src="js/pages/generales.js"></script>
 
 </html>
